--- a/css/desktop.css
+++ b/css/desktop.css
@@ -56,7 +56,7 @@
 
   .parfume-desc-box-text {
     width: 300px;
-    height: 420px;
+    height: 380px;
   }
 
   .product-category {
@@ -85,16 +85,21 @@
     font-size:30px;
     color: hsl(158, 36%, 37%);
     font-weight: bold;
+    display: inline-block;
   }
 
   .product-price {
     margin-top:20px;
+    position: relative;
   }
 
   .price-old {
     color: hsl(228, 12%, 48%);
     text-decoration: line-through;
-    margin-left:20px;
+    display: inline-block;
+    position: absolute;
+    top: 8px;
+    left: 110px;
   }
 
   .add-product {
